feat: 추천 코인 차트정보 좋아요, 싫어요 분리